--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
@@ -32,6 +32,7 @@
 
     <div class="row">
         <div class="col-md-6">
+
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal*</label>
@@ -46,14 +47,14 @@
                     @Html.ValidationMessageFor(q => q.IdPuntoVta, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-8">
                 <div class="form-group">
                     <label for="IdCliente">Cliente*</label>
                     @Html.Partial("_CmbCliente_Factura", Model)
                     @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="form-group">
                     <label for="IdVendedor">Vendedor*</label>
                     @Html.DropDownListFor(q => q.IdVendedor, new SelectList(ViewBag.lst_vendedor, "IdVendedor", "Ve_Vendedor"), new { @class = "form-control", @id = "IdVendedor" })
@@ -67,6 +68,27 @@
                     @Html.ValidationMessageFor(q => q.IdContacto, "", new { @class = "text-danger" })
                 </div>
             </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="vt_serie1">Establecimiento*</label>
+                    @Html.TextBoxFor(q=>q.vt_serie1,new { @class = "form-control", @id = "vt_serie1" })
+                    @Html.ValidationMessageFor(q => q.vt_serie1, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="vt_serie2">Pto. Emisión*</label>
+                    @Html.TextBoxFor(q => q.vt_serie2, new { @class = "form-control", @id = "vt_serie2" })
+                    @Html.ValidationMessageFor(q => q.vt_serie2, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="vt_NumFactura"># Documento*</label>
+                    @Html.TextBoxFor(q => q.vt_NumFactura, new { @class = "form-control", @id = "vt_NumFactura" })
+                    @Html.ValidationMessageFor(q => q.vt_NumFactura, "", new { @class = "text-danger" })
+                </div>
+            </div>
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="pf_observacion">Observación</label>
@@ -77,8 +99,6 @@
         </div>
 
         <div class="col-md-6">
-
-
             <div id="Tabs" role="tabpanel">
                 <ul class="nav nav-tabs" role="tablist">
                     <li class="active">
@@ -88,7 +108,7 @@
                         <a href="#tab_cuotas" aria-controls="lote" role="tab" data-toggle="tab" id="link_cuotas">Detalle de cuotas</a>
                     </li>
                 </ul>
-                <div class="tab-content" style="padding-top: 20px">
+                <div class="tab-content" style="padding-top: 5px">
                     <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_general">
                         <div class="col-md-12">
                             <div class="form-group">
@@ -137,6 +157,28 @@
                         </div>                        
                     </div>
                     <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_cuotas">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="fecha_primera_cuota">Fecha primer cuota</label>
+                                    <div class="input-group date">
+                                        <div class="input-group-addon">
+                                            <i class="fa fa-calendar"></i>
+                                        </div>
+                                        @Html.TextBoxFor(q => q.fecha_primera_cuota, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_primera_cuota" })
+                                        @Html.ValidationMessageFor(q => q.fecha_primera_cuota, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="">Valor abono</label>
+                                    @Html.TextBoxFor(q=>q.valor_abono,new { @class = "form-control", @id = "valor_abono" })
+                                </div>
+                            </div>
+                        </div>
+                        @Html.Action("GridViewPartial_factura_cuotas")
+                        <br />
                     </div>
                 </div>
             </div>
@@ -163,10 +205,14 @@
         CargarPuntosDeVenta();
         get_info_termino_pago();
         get_info_cliente();
+        GetUltimoDocumento();
         //Date picker
         $('#vt_fecha').datepicker({
             autoclose: true
         })
+        $('#fecha_primera_cuota').datepicker({
+            autoclose: true
+        })        
         $('#vt_fech_venc').datepicker({
             autoclose: true
         })
@@ -181,6 +227,16 @@
         });
         $("#IdSucursal").change(function () {
             CargarPuntosDeVenta();
+            GetUltimoDocumento();
+        });
+        $("#IdPuntoVta").change(function () {
+            GetUltimoDocumento();
+        });
+        $("#fecha_primera_cuota").change(function () {
+            CargarCuotas();
+        });
+        $("#valor_abono").change(function () {
+            CargarCuotas();
         });
     });
 
@@ -330,6 +386,7 @@
             success: function (data) {
                 $.each(data, function (i, row) {
                     $("#IdPuntoVta").append("<option value=" + row.IdPuntoVta + ">" + row.nom_PuntoVta + "</option>");
+                    $("#IdPuntoVta").val(1);
                 });
             },
             error: function (error) {
@@ -337,4 +394,48 @@
         });
     }
 
-                </script>
+       function GetUltimoDocumento() {        
+        var datos = {
+            IdSucursal: $("#IdSucursal").val(),
+            IdPuntoVta: $("#IdPuntoVta").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetUltimoDocumento", "Factura",new { Area = "Facturacion"})',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#vt_serie1").val(data.Establecimiento);
+                $("#vt_serie2").val(data.PuntoEmision);
+                $("#vt_NumFactura").val(data.NumDocumento);
+            },
+            error: function (error) {
+            }
+        });
+        }
+
+
+        function CargarCuotas() {
+            var datos = {
+                FechaPrimerPago: $("#fecha_primera_cuota").val(),
+                    IdTerminoPago: $("#vt_tipo_venta").val(),
+                ValorPrimerPago: $("#valor_abono").val()
+            }
+            $.ajax({
+                type: 'POST',
+                data: JSON.stringify(datos),
+                url: '@Url.Action("CargarCuotas", "Factura",new { Area = "Facturacion"})',
+                async: false,
+                dataType: 'json',
+                contentType: 'application/json; charset=utf-8',
+                success: function (data) {
+                },
+                error: function (error) {
+                }
+            });
+            GridView_factura_cuotas.PerformCallback();
+        }
+
+</script>
