--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/TipoNota/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/TipoNota/Nuevo.cshtml
@@ -43,7 +43,17 @@
             </div>
         </div>
     </div>
+        <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
 
+                    @Html.Action("GridViewPartial_tipo_nota_sucursal")
+
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
