--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/TipoNota/_GridViewPartial_tipo_nota_sucursal.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/TipoNota/_GridViewPartial_tipo_nota_sucursal.cshtml
@@ -1,25 +1,67 @@
+@using System.Web.UI.WebControls;
+
 @{
-	var grid = Html.DevExpress().GridView(settings => {
+    var grid = Html.DevExpress().GridView(settings =>
+    {
         settings.Name = "GridView_tipo_nota_sucursal";
-        settings.CallbackRouteValues = new { Controller = "TipoNota", Action = "GridViewPartial_tipo_nota_sucursal" };
+        settings.CallbackRouteValues = new { Controller = "TipoNota", Action = "GridViewPartial_tipo_nota_sucursal", IdEmpresa = Model == null ? 0 : Model.IdEmpresa, IdSucursal = Model == null ? "" : Model.IdSucursal, IdTipoNota = Model == null ? "" : Model.IdTipoNota };
+        settings.KeyFieldName = "IdSucursal";
+        settings.Width = Unit.Percentage(100);
+        settings.SettingsEditing.Mode = GridViewEditingMode.Inline;
+        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "TipoNota", Action = "Editing_AddNew", Area = "Facturacion" };
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "TipoNota", Action = "Editing_Update", Area = "Facturacion" };
+        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "TipoNota", Action = "Editing_Delete", Area = "Facturacion" };
 
+        settings.CommandColumn.Visible = true;
+        settings.CommandColumn.ShowNewButton = true;
+        settings.CommandColumn.ShowEditButton = true;
+        settings.CommandColumn.ShowDeleteButton = true;
 
-		settings.KeyFieldName = "IdSucursal";
+        settings.SettingsContextMenu.Enabled = true;
+        settings.SettingsBehavior.EnableCustomizationWindow = true;
 
-		settings.SettingsPager.Visible = true;
-		settings.Settings.ShowGroupPanel = true;
-		settings.Settings.ShowFilterRow = true;
-		settings.SettingsBehavior.AllowSelectByRowClick = true;
+        settings.SettingsPager.Visible = true;
+        settings.Settings.ShowGroupPanel = false;
+        settings.SettingsBehavior.AllowSelectByRowClick = true;
+        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.Off;
+        settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
+        settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
+        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
 
-		settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.Off;
-		settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
-		settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
-		settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
-		settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
-
-				settings.Columns.Add("IdSucursal");
-				settings.Columns.Add("IdTipoNota");
-				settings.Columns.Add("IdCtaCble");
-			});
+        //Funcion para inicializar fila al presionar nuevo
+        settings.InitNewRow = (s, e) =>
+        {
+            e.NewValues["IdSucursal"] = 0;
+            e.NewValues["IdTipoNota"] = 0;
+        };
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdSucursal";
+            column.Caption = "Sucursal";
+            column.Width = Unit.Percentage(50);
+            column.EditorProperties().ComboBox(p =>
+            {
+                p.Columns.Add("Su_Descripcion", "Descripción").Width = Unit.Percentage(100);
+                p.TextField = "Su_Descripcion";
+                p.ValueField = "IdSucursal";
+                p.ValueType = typeof(int);
+                p.DataSource = ViewBag.lst_sucursal;
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdCtaCble";
+            column.Caption = "Cuenta contable";
+            column.Width = Unit.Percentage(50);
+            column.EditorProperties().ComboBox(p =>
+            {
+                p.Columns.Add("IdCtacble", "Cuenta").Width = Unit.Percentage(100);
+                p.TextField = "pc_Cuenta";
+                p.ValueField = "IdCtaCble";
+                p.ValueType = typeof(int);
+                p.DataSource = ViewBag.lst_cuenta;
+            });
+        });
+    });
 }
-@grid.Bind(Model).GetHtml()
+@grid.Bind(Model.Lst_fa_TipoNota_x_Empresa_x_Sucursal).GetHtml()
