--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/TipoNota/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/TipoNota/Modificar.cshtml
@@ -9,58 +9,58 @@
 }
 
 @using (Html.BeginForm("Modificar", "TipoNota", FormMethod.Post, new { @class = "form", @role = "form" }))
-{
-    @Html.HiddenFor(q => q.IdTipoNota)
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="CodTipoNota">Código</label>
-                    @Html.TextBoxFor(q => q.CodTipoNota, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.CodTipoNota, "", new { @class = "form", @role = "text-danger" })
-                </div>
+{@Html.HiddenFor(q => q.IdEmpresa)
+@Html.HiddenFor(q => q.IdTipoNota)
+<div class="row">
+    <div class="col-md-12">
+        <div class="col-md-3">
+            <div class="form-group">
+                <label for="CodTipoNota">Código</label>
+                @Html.TextBoxFor(q => q.CodTipoNota, new { @class = "form-control" })
+                @Html.ValidationMessageFor(q => q.CodTipoNota, "", new { @class = "form", @role = "text-danger" })
             </div>
         </div>
     </div>
-    <div class="row">
+</div>
+<div class="row">
+    <div class="col-md-12">
         <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="Tipo">Tipo*</label>
-                    @Html.DropDownListFor(q => q.Tipo, new SelectList(ViewBag.lst_tipos, "Key", "Value"), new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.Tipo, "", new { @class = "form", @role = "text-danger" })
-                </div>
+            <div class="form-group">
+                <label for="Tipo">Tipo*</label>
+                @Html.DropDownListFor(q => q.Tipo, new SelectList(ViewBag.lst_tipos, "Key", "Value"), new { @class = "form-control" })
+                @Html.ValidationMessageFor(q => q.Tipo, "", new { @class = "form", @role = "text-danger" })
             </div>
         </div>
     </div>
-    <div class="row">
+</div>
+<div class="row">
+    <div class="col-md-12">
         <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="No_Descripcion">Descripción*</label>
-                    @Html.TextBoxFor(q => q.No_Descripcion, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.No_Descripcion, "", new { @class = "form", @role = "text-danger" })
-                </div>
+            <div class="form-group">
+                <label for="No_Descripcion">Descripción*</label>
+                @Html.TextBoxFor(q => q.No_Descripcion, new { @class = "form-control" })
+                @Html.ValidationMessageFor(q => q.No_Descripcion, "", new { @class = "form", @role = "text-danger" })
             </div>
         </div>
     </div>
-    <div class="row">
+</div>
+<div class="row">
+    <div class="col-md-12">
         <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
+            <div class="form-group">
 
-                    @Html.Action("GridViewPartial_tipo_nota_sucursal")
+                @Html.Action("GridViewPartial_tipo_nota_sucursal")
 
-                </div>
             </div>
         </div>
     </div>
+</div>
 
-    <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","TipoNota",new { Area = "Facturacion" },null)">Cancelar</a>
-    </div>
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }
+<div class="box-footer">
+    <button type="submit" class="btn btn-primary">Guardar</button>
+    <a class="btn btn-default" href="@Url.Action("Index","TipoNota",new { Area = "Facturacion" },null)">Cancelar</a>
+</div>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
 }
