--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/TipoNota/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/TipoNota/Anular.cshtml
@@ -10,6 +10,7 @@
 
 @using (Html.BeginForm("Anular", "TipoNota", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdTipoNota)
     <div class="row">
         <div class="col-md-12">
