--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/TipoNota/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/TipoNota/Nuevo.cshtml
@@ -10,6 +10,7 @@
 
 @using (Html.BeginForm("Nuevo", "TipoNota", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q=>q.IdEmpresa)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
