--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Anular.cshtml
@@ -14,6 +14,7 @@
     @Html.HiddenFor(q => q.IdSucursal)
     @Html.HiddenFor(q => q.IdBodega)
     @Html.HiddenFor(q => q.IdCbteVta)
+    @Html.HiddenFor(q => q.IdPuntoVta)
 
     if (ViewBag.mensaje != null)
     {
